# VFX-HDRI

./: CMakeLists.txt  README.md
input/church/: info.txt
input/ib_stair/: info.txt
src/: ImageUtils.cpp  ImageUtils.h  MTBUtils.cpp  MTBUtils.h  main.cpp
